--- a/2x2.html
+++ b/2x2.html
@@ -9,6 +9,8 @@
 <body>
     <a href="index.html"></a>
 
+    <center><img src="images/22.jpeg" alt=""></center>
+    
     <h2>Content is in making.</h2>
 </body>
 </html>
