--- a/alltutorials.html
+++ b/alltutorials.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <a href="3x3blindfolded.html">
+                    <a href="bld.html">
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
