--- a/alltutorials.html
+++ b/alltutorials.html
@@ -138,6 +138,24 @@
                         </div>
                     </a>
                 </div>
+
+                 <div class="col-md-4">
+                    <a href="pattern.html">
+                        <div class="card-flyer">
+                            <div class="text-box">
+                                <div class="image-box">
+                                    <img src="images/patternalll.png" alt="" />
+                                </div>
+
+                                <div class="text-container">
+                                    <h6>PATTERNS</h6>
+                                   <p>Here are the algorithms of various Rubik's Cube patterns.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
             
             
             </div>
