--- a/index.html
+++ b/index.html
@@ -244,8 +244,12 @@
       <div class="col-md-4 footer-box">
 
         <p><b>Subscribe</b></p>
-        <input type="email" class="form-control" placeholder="Your Email">
-        <button type="button" class="btn btn-primary">Subscribe</button>
+         <form>
+          
+          <input type="email" placeholder="Email*" required>
+         <br>
+          <button id="submit" type="submit">Subscribe</button>
+        </form>
       
       </div>
     </div>
